--- a/core/macros/abilities.cfg
+++ b/core/macros/abilities.cfg
@@ -702,8 +702,7 @@ Enemy units cannot see this unit while it is in deep water, except if they have 
     [skirmisher]
         id=distract
         name= _ "distract"
-        description= _ "Distract:
-This unit negates enemy Zones of Control around itself for allied units."
+        description= _ "Distract: This unit negates enemy Zones of Control around itself for allied units."
         affect_self=yes
         affect_allies=yes
         [affect_adjacent]
@@ -719,10 +718,8 @@ This unit negates enemy Zones of Control around itself for allied units."
         id=shock
         name= _ "shock"
         name_inactive= _ "shock"
-        description= _ "Shock:
-When this attack is used on offense, the opponent will retaliate with one less strike than normally, to a minimum of one strike."
-        description_inactive= _ "Shock:
-When this attack is used on offense, the opponent will retaliate with one less strike than normally, to a minimum of one strike."
+        description= _ "Shock: When this attack is used on offense, the opponent will retaliate with one less strike than normally, to a minimum of one strike."
+        description_inactive= _ "Shock: When this attack is used on offense, the opponent will retaliate with one less strike than normally, to a minimum of one strike."
         sub=1
         active_on=offense
         apply_to=opponent
@@ -745,8 +742,7 @@ When this attack is used on offense, the opponent will retaliate with one less s
 [dummy]
     id=initiative
     name= _ "initiative"
-    description= _ "Initiative:
-Adjacent allies are granted Firststrike with all weapons."
+    description= _ "Initiative: Adjacent allies are granted Firststrike with all weapons."
 [/dummy]
 [/abilities]
     [event]
@@ -851,8 +847,7 @@ Adjacent allies are granted Firststrike with all weapons."
         value=-25
         cumulative=no
         name= _ "deluminates"
-        description= _ "Deluminates:
-This unit deluminates the surrounding area, making chaotic units fight better, and lawful units fight worse.
+        description= _ "Deluminates: This unit deluminates the surrounding area, making chaotic units fight better, and lawful units fight worse.
 
 Any units adjacent to this unit will fight as if it were dawn when it is day, and as if it were night when it is dawn."
         affect_self=yes
@@ -863,11 +858,9 @@ Any units adjacent to this unit will fight as if it were dawn when it is day, an
     [resistance]
         id=disrupts
         name= _ "disrupts"
-        description= _ "Disrupts:
-Enemy units adjacent to this unit will have their resistances halved. Weaknesses are not affected."
+        description= _ "Disrupts: Enemy units adjacent to this unit will have their resistances halved. Weaknesses are not affected."
         name_inactive= _ "disrupts"
-        description_inactive= _ "Disrupts:
-Enemy units adjacent to this unit will have their resistances halved. Weaknesses are not affected."
+        description_inactive= _ "Disrupts: Enemy units adjacent to this unit will have their resistances halved. Weaknesses are not affected."
         affect_self=no
         affect_allies=no
         affect_enemies=yes
@@ -891,8 +884,7 @@ Enemy units adjacent to this unit will have their resistances halved. Weaknesses
         max_value=60
         apply_to=blade,pierce,impact,fire,cold,arcane
         name= _ "protection"
-        description= _ "Protection:
-Adjacent units of this side receive a +10% bonus to all resistances (up to a maximum of 60%)."
+        description= _ "Protection: Adjacent units of this side receive a +10% bonus to all resistances (up to a maximum of 60%)."
         affect_self=no
         [affect_adjacent]
             adjacent=n,ne,se,s,sw,nw
@@ -908,8 +900,7 @@ Adjacent units of this side receive a +10% bonus to all resistances (up to a max
         max_value=60
         apply_to=blade,pierce,impact,fire,cold,arcane
         name= _ "protection"
-        description= _ "Protection:
-Adjacent units of this side receive a +20% bonus to all resistances (up to a maximum of 60%)."
+        description= _ "Protection: Adjacent units of this side receive a +20% bonus to all resistances (up to a maximum of 60%)."
         affect_self=no
         [affect_adjacent]
             adjacent=n,ne,se,s,sw,nw
@@ -922,12 +913,10 @@ Adjacent units of this side receive a +20% bonus to all resistances (up to a max
         id=swamp_prowl
         name= _ "swamp prowl"
         name_inactive= _ "swamp prowl"
-        description= _ "Swamp Prowl:
-This unit can hide in swamps, and remain undetected by its enemies.
+        description= _ "Swamp Prowl: This unit can hide in swamps, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in a swamp, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        description_inactive= _ "Swamp Prowl:
-This unit can hide in swamps, and remain undetected by its enemies.
+        description_inactive= _ "Swamp Prowl: This unit can hide in swamps, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in a swamp, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
@@ -949,11 +938,9 @@ Enemy units cannot see this unit while it is in a swamp, except if they have uni
         value=3
         id=healing
         name= _ "foresthome"
-        description= _ "Foresthome:
-This unit will regenerate 3 hp when in forest."
+        description= _ "Foresthome: This unit will regenerate 3 hp when in forest."
         name_inactive= _ "foresthome"
-        description_inactive= _ "Foresthome:
-This unit will regenerate 3 hp when in forest."
+        description_inactive= _ "Foresthome: This unit will regenerate 3 hp when in forest."
         affect_self=yes
     [/regenerate]
 #enddef
@@ -968,11 +955,9 @@ This unit will regenerate 3 hp when in forest."
         value=3
         id=healing
         name= _ "waterhome"
-        description= _ "Waterhome:
-This unit will regenerate 3 hp when in deep or shallow water."
+        description= _ "Waterhome: This unit will regenerate 3 hp when in deep or shallow water."
         name_inactive= _ "waterhome"
-        description_inactive= _ "Waterhome:
-This unit will regenerate 3 hp when in deep or shallow water."
+        description_inactive= _ "Waterhome: This unit will regenerate 3 hp when in deep or shallow water."
         affect_self=yes
     [/regenerate]
 #enddef
@@ -987,11 +972,9 @@ This unit will regenerate 3 hp when in deep or shallow water."
         value=3
         id=healing
         name= _ "deserthome"
-        description= _ "Deserthome:
-This unit will regenerate 3 hp when in desert or sand."
+        description= _ "Deserthome: This unit will regenerate 3 hp when in desert or sand."
         name_inactive= _ "deserthome"
-        description_inactive= _ "Deserthome:
-This unit will regenerate 3 hp when in desert or sand."
+        description_inactive= _ "Deserthome: This unit will regenerate 3 hp when in desert or sand."
         affect_self=yes
     [/regenerate]
 #enddef
@@ -1006,11 +989,9 @@ This unit will regenerate 3 hp when in desert or sand."
         value=3
         id=healing
         name= _ "mountainhome"
-        description= _ "Mountainhome:
-This unit will regenerate 3 hp when on mountains."
+        description= _ "Mountainhome: This unit will regenerate 3 hp when on mountains."
         name_inactive= _ "mountainhome"
-        description_inactive= _ "Mountainhome:
-This unit will regenerate 3 hp when in mountains."
+        description_inactive= _ "Mountainhome: This unit will regenerate 3 hp when in mountains."
         affect_self=yes
     [/regenerate]
 #enddef
@@ -1020,8 +1001,7 @@ This unit will regenerate 3 hp when in mountains."
     [chance_to_hit]
         id=circle
         name= _ "always hits"
-        description= _ "always hits:
-This attack always has a 100% chance to hit"
+        description= _ "always hits: This attack always has a 100% chance to hit"
         value=100
         cumulative=no
     [/chance_to_hit]
@@ -1031,11 +1011,9 @@ This attack always has a 100% chance to hit"
     [attacks]
         id=nocounter
         name= _ "no counter-attack"
-        description= _ "no counter-attack:
-The opponent has always a 0% chance to hit, when this unit is attacking."
+        description= _ "no counter-attack: The opponent has always a 0% chance to hit, when this unit is attacking."
         name_inactive= _ "no counter-attack"
-        description_inactive= _ "no counter-attack:
-The opponent has always a 0% chance to hit, when this unit is attacking."
+        description_inactive= _ "no counter-attack: The opponent has always a 0% chance to hit, when this unit is attacking."
         value=0
         cumulative=no
         active_on=offense
@@ -1048,12 +1026,10 @@ The opponent has always a 0% chance to hit, when this unit is attacking."
         id=mountainambush
         name= _ "mountain ambush"
         name_inactive= _ " mountain ambush"
-        description= _ "Mountain Ambush:
-This unit can hide in mountains and hills, and remain undetected by its enemies.
+        description= _ "Mountain Ambush: This unit can hide in mountains and hills, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in mountains or hills, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        description_inactive= _ "Ambush:
-This unit can hide in forest, and remain undetected by its enemies.
+        description_inactive= _ "Ambush: This unit can hide in forest, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in mountains or hills, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
@@ -1071,12 +1047,10 @@ Enemy units cannot see this unit while it is in mountains or hills, except if th
         id=swampambush
         name= _ "swamp ambush"
         name_inactive= _ "swamp ambush"
-        description= _ "Swamp Ambush:
-This unit can hide in swamp, and remain undetected by its enemies.
+        description= _ "Swamp Ambush: This unit can hide in swamp, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in swamp, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        description_inactive= _ "Ambush:
-This unit can hide in forest, and remain undetected by its enemies.
+        description_inactive= _ "Ambush: This unit can hide in forest, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in swamp, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
@@ -1093,12 +1067,10 @@ Enemy units cannot see this unit while it is in swamp, except if they have units
         id=waterambush
         name= _ "water ambush"
         name_inactive= _ "water ambush"
-        description= _ "water ambush:
-This unit can hide in water, and remain undetected by its enemies.
+        description= _ "water ambush: This unit can hide in water, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in water, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        description_inactive= _ "Ambush:
-This unit can hide in forest, and remain undetected by its enemies.
+        description_inactive= _ "Ambush: This unit can hide in forest, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in water, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
@@ -1115,12 +1087,10 @@ Enemy units cannot see this unit while it is in water, except if they have units
         id=caveambush
         name= _ "cave ambush"
         name_inactive= _ "cave ambush"
-        description= _ "Cave Ambush:
-This unit can hide in cave, and remain undetected by its enemies.
+        description= _ "Cave Ambush: This unit can hide in cave, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in cave, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
-        description_inactive= _ "Ambush:
-This unit can hide in forest, and remain undetected by its enemies.
+        description_inactive= _ "Ambush: This unit can hide in forest, and remain undetected by its enemies.
 
 Enemy units cannot see this unit while it is in cave, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
         affect_self=yes
