--- a/core/units/undead/Nemesis.cfg
+++ b/core/units/undead/Nemesis.cfg
@@ -20,7 +20,7 @@
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
 
-This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_BACKSTAB}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}+{WEAPON_SPECIAL_NOCOUNTERATTACK}+{WEAPON_SPECIAL_CIRCLE}
+This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_BACKSTAB}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}
     die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
     {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
     [portrait]
