update abilities and undead units.

--- a/core/macros/abilities.cfg
+++ b/core/macros/abilities.cfg
@@ -897,10 +897,26 @@ Any units adjacent to this unit will fight as if it were dawn when it is day, an
     [resistance]
         id=middle protection
         add=20
-        max_value=60
+        max_value=70
         apply_to=blade,pierce,impact,fire,cold,arcane
         name= _ "protection"
-        description= _ "Protection: Adjacent units of this side receive a +20% bonus to all resistances (up to a maximum of 60%)."
+        description= _ "Protection: Adjacent units of this side receive a +20% bonus to all resistances (up to a maximum of 70%)."
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+        [/affect_adjacent]
+    [/resistance]
+#enddef
+
+#TODO: special notes
+#define ABILITY_GREAT_PROTECTION
+    [resistance]
+        id=great protection
+        add=30
+        max_value=80
+        apply_to=blade,pierce,impact,fire,cold,arcane
+        name= _ "protection"
+        description= _ "Protection: Adjacent units of this side receive a +30% bonus to all resistances (up to a maximum of 80%)."
         affect_self=no
         [affect_adjacent]
             adjacent=n,ne,se,s,sw,nw
