--- a/core/units/undead/Eris.cfg
+++ b/core/units/undead/Eris.cfg
@@ -37,6 +37,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
     [/portrait]
     [abilities]
         {ABILITY_SKIRMISHER}
+        {ABILITY_SMALL_PROTECTION}
     [/abilities]
     [attack]
         name=plague staff
@@ -44,8 +45,8 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         icon=attacks/staff-plague.png
         type=impact
         range=melee
-        damage=7
-        number=3
+        damage=3
+        number=7
         [specials]
             {WEAPON_SPECIAL_PLAGUE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
