--- a/core/units/undead/Nemesis.cfg
+++ b/core/units/undead/Nemesis.cfg
@@ -20,7 +20,7 @@
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
 
-This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_BACKSTAB}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}
+This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_BACKSTAB}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_ARCANE}+{SPECIAL_NOTES_POISON}+{SPECIAL_NOTES_DRAIN}
     die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
     {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
     [portrait]
@@ -56,16 +56,17 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         icon=attacks/staff-plague.png
         type=impact
         range=melee
-        damage=8
-        number=3
+        damage=3
+        number=8
         [specials]
             {WEAPON_SPECIAL_PLAGUE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
-            # {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_DRAIN}
             {WEAPON_SPECIAL_BACKSTAB}
             # {WEAPON_SPECIAL_SHOCK}
             # {WEAPON_SPECIAL_STUN}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_POISON}
         [/specials]
     [/attack]
     [attack]
@@ -75,7 +76,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [specials]
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
-            # {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_DRAIN}
             {WEAPON_SPECIAL_BACKSTAB}
             {WEAPON_SPECIAL_SLOW}
             # {WEAPON_SPECIAL_SHOCK}
@@ -94,7 +95,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         [specials]
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
-            # {WEAPON_SPECIAL_DRAIN}
+            {WEAPON_SPECIAL_DRAIN}
             {WEAPON_SPECIAL_BACKSTAB}
             {WEAPON_SPECIAL_SLOW}
             # {WEAPON_SPECIAL_SHOCK}
