core config file update for scenario macro.

--- a/core/macros/abilities.cfg
+++ b/core/macros/abilities.cfg
@@ -329,6 +329,88 @@ Adjacent own units of lower level will do more damage in battle. When a unit adj
     [/leadership]
 #enddef
 
+#define ABILITY_LEADERSHIP_LEVEL_6
+    # Canned definition of the Leadership (level 5) ability to be included in an
+    # [abilities] clause.
+    [leadership]
+        id=leadership
+        value=150
+        cumulative=no
+        name= _ "leadership"
+        female_name= _ "female^leadership"
+        description= _ "This unit can lead your own units that are next to it, making them fight better.
+
+Adjacent own units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+            [filter]
+                level=0
+            [/filter]
+        [/affect_adjacent]
+    [/leadership]
+    [leadership]
+        id=leadership
+        value=125
+        cumulative=no
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+            [filter]
+                level=1
+            [/filter]
+        [/affect_adjacent]
+    [/leadership]
+    [leadership]
+        id=leadership
+        value=100
+        cumulative=no
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+            [filter]
+                level=2
+            [/filter]
+        [/affect_adjacent]
+    [/leadership]
+    [leadership]
+        id=leadership
+        value=75
+        cumulative=no
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+            [filter]
+                level=3
+            [/filter]
+        [/affect_adjacent]
+    [/leadership]
+    [leadership]
+        id=leadership
+        value=50
+        cumulative=no
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+            [filter]
+                level=4
+            [/filter]
+        [/affect_adjacent]
+    [/leadership]
+    [leadership]
+        id=leadership
+        value=25
+        cumulative=no
+        affect_self=no
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+            [filter]
+                level=5
+            [/filter]
+        [/affect_adjacent]
+    [/leadership]
+#enddef
+
 #define ABILITY_SKIRMISHER
     # Canned definition of the Skirmisher ability to be included in an [abilities]
     # clause.
@@ -1135,3 +1217,177 @@ Enemy units cannot see this unit except if they have units next to it. Any enemy
     [/hides]
 #enddef
 
+#define WEAPON_SPECIAL_UBER_BACKSTAB
+    [damage]
+        id=uber backstab
+        name= _ "uber backstab"
+        description= _ "When used offensively, this attack deals triple damage if there is an enemy of the target on the opposite side of the target, and that unit is not incapacitated (turned to stone or otherwise paralyzed)."
+        multiply=3
+        backstab=yes
+        active_on=offense
+    [/damage]
+#enddef
+
+#define ABILITY_REGENERATES_OTHER VALUE
+    [regenerate]
+        value={VALUE}
+        id=regenerates {VALUE}
+        name= _ "regenerates ("+{VALUE}+_")"
+        female_name= _ "female^regenerates ("+{VALUE}+_")"
+        description= _ "The unit will heal itself "+{VALUE}+_" HP per turn. If it is poisoned, it will remove the poison instead of healing."
+        affect_self=yes
+        poison=cured
+    [/regenerate]
+#enddef
+
+#define ABILITY_HEALS_OTHER VALUE
+    [heals]
+        value={VALUE}
+        id=healing
+        affect_allies=yes
+	cumulative=yes
+        name= _ "heals +"+{VALUE}
+        female_name= _ "female^heals +"+{VALUE}
+        description= _ "This unit combines herbal remedies with magic to heal units more quickly than is normally possible on the battlefield.
+
+A unit cared for by this healer may heal up to "+{VALUE}+_" HP per turn, or be cured of poisoning."
+        affect_self=no
+        poison=cured
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+        [/affect_adjacent]
+    [/heals]
+#enddef
+
+#define ABILITY_BURNING_AURA POWER
+    [heals]
+        value=-{POWER}
+        id=burning_aura {POWER}
+        affect_enemies=yes
+        name= _ "burns foes ("+{POWER}+_")"
+        female_name= _ "female^burns foes ("+{POWER}+_")"
+        description= _ "Allows the unit to damage adjacent enemies at the beginning of your turn for "+{POWER}+_" damage.
+
+This ability ignores any resistances or weaknesses of enemies, so it's very powerful against spirits. It never kills, only leaves 1hp."
+        affect_self=no
+        affect_allies=no
+        poison=slowed
+        [affect_adjacent]
+            adjacent=n,ne,se,s,sw,nw
+        [/affect_adjacent]
+    [/heals]
+#enddef
+
+#define WEAPON_SPECIAL_DISTANT_ATTACK
+    [attacks]
+        id=distant attack
+        name= _ "distant attack"
+        name_inactive= _ "distant attack"
+        description= _ "When this attack is used, the enemy will not counter."
+        description_inactive= _ "When this attack is used, the enemy will not counter."
+        value=0
+        apply_to=opponent
+	active_on=offense
+    [/attacks]
+#enddef
+
+#define WEAPON_SPECIAL_HIT_AND_RUN
+    [dummy]
+        id=hit and run
+        name= _ "hit and run"
+        description= _ "When this attack is used, the unit regains half of its max MP."
+    [/dummy]
+#enddef
+
+#define ABILITY_THORNS
+    [dummy]
+        id=thorns
+        name= _ "thorns"
+        description= _ "Any unit that attacks this unit in melee suffers two points of piercing damage. Unlike reflect, it can kill."
+    [/dummy]
+#enddef
+
+#define ABILITY_MOCKERY
+    [dummy]
+        id=mockery
+        name= _ "mockery"
+        description= _ "When an attack against this unit misses, he/she heals 2 HP."
+    [/dummy]
+#enddef
+#define ABILITY_MURDERLUST
+    [dummy]
+        id=murderlust
+        name= _ "murderlust"
+        description= _ "When this unit kills another unit, he/she heals 8 HP."
+    [/dummy]
+#enddef
+
+#define ABILITY_KILLHUNGER
+    [dummy]
+        id=killhunger
+        name= _ "killhunger"
+        description= _ "When this unit kills another unit, it heals 4 HP, and is ridden of poison and slow."
+    [/dummy]
+#enddef
+
+#define ABILITY_EVISCERATION
+    [dummy]
+        id=evisceration
+        name= _ "evisceration"
+        description= _ "When this unit kills another unit, nearby allies heal 10 HP, and are ridden of poison and slow."
+    [/dummy]
+#enddef
+#define ABILITY_GREATER_EVISCERATION
+    [dummy]
+        id=greater evisceration
+        name= _ "greater evisceration"
+        description= _ "When this unit kills another unit, nearby allies heal 16 HP, and are ridden of poison and slow."
+    [/dummy]
+#enddef
+#define ABILITY_REGROWING
+    [dummy]
+        id=regrowing
+        name= _ "regrowing"
+        description= _ "When this unit begins combat, offensively or defensively, it heals an amount of hitpoints equal to two times their level."
+    [/dummy]
+#enddef
+
+#define ABILITY_STEALS
+    [dummy]
+        id=steals
+        name= _ "steals"
+        description= _ "When this unit hits an enemy with a melee attack, it has a chance to earn some gold."
+    [/dummy]
+#enddef
+#define ABILITY_TAX_COLLECTOR
+    [dummy]
+        id=tax collector
+        name= _ "tax collector"
+        description= _ "When this unit hits an enemy, it has a chance to lose of its side's gold."
+    [/dummy]
+#enddef
+
+#define ABILITY_IMMUNE_TO_SLOW
+    [dummy]
+        id=resistant to slow
+        name= _ "resistant to slow"
+        description= _ "This unit has so much life energy in it, that it will break through any slowing effect almost instantly."
+    [/dummy]
+#enddef
+
+#define WEAPON_SPECIAL_EXPLOSIVE_SLOW
+    [damage]
+        id=explosive slow
+        name= _ "explosive slow"
+        description= _ "When this attack is used, all enemies adjacent to a target are slowed."
+    [/damage]
+#enddef
+
+#define ABILITY_PENETRATE
+    [dummy]
+        id=penetrate
+        name= _ "penetrates"
+        female_name= _ "female^penetrates"
+        description= _ "This unit gains 1 movement after attacking, allowing it to slowly progress through ranks of enemies if it can survive their attacks."
+    [/dummy]
+#enddef
