--- a/core/units/undead/Nyx.cfg
+++ b/core/units/undead/Nyx.cfg
@@ -15,7 +15,7 @@
     level=6
     alignment=chaotic
     advances_to=null
-    {AMLA_DEFAULT}
+    {AMLA_NEMESIS}
     cost=250
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
@@ -37,9 +37,9 @@ This ability, in all aspects, is the first step towards cheating death of its ul
     [/portrait]
     [abilities]
         {ABILITY_FEEDING}
-        {ABILITY_REGENERATES}
+        {ABILITY_REGENERATES_OTHER 16}
         {ABILITY_SKIRMISHER}
-        {ABILITY_CURES}
+        {ABILITY_GREATER_EVISCERATION}
         {ABILITY_STEADFAST}
         {ABILITY_LEADERSHIP_LEVEL_5}
         {ABILITY_TELEPORT}
@@ -49,6 +49,10 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         {ABILITY_DISRUPTS}
         {ABILITY_GREAT_PROTECTION}
         {ABILITY_STEALTH}
+        {ABILITY_IMMUNE_TO_SLOW}
+        {ABILITY_STEALS}
+        {ABILITY_PENETRATE}
+        {ABILITY_BURNING_AURA 8}
     [/abilities]
     [attack]
         name=plague staff
@@ -62,12 +66,13 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_PLAGUE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_DRAIN}
-            {WEAPON_SPECIAL_BACKSTAB}
-            {WEAPON_SPECIAL_SLOW}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
             {WEAPON_SPECIAL_SHOCK}
             {WEAPON_SPECIAL_STUN}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
             {WEAPON_SPECIAL_POISON}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
     [/attack]
     [attack]
@@ -78,11 +83,12 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_DRAIN}
-            {WEAPON_SPECIAL_BACKSTAB}
-            {WEAPON_SPECIAL_SLOW}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
             {WEAPON_SPECIAL_SHOCK}
             {WEAPON_SPECIAL_STUN}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
         range=ranged
         damage=30
@@ -97,11 +103,12 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_CIRCLE}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_DRAIN}
-            {WEAPON_SPECIAL_BACKSTAB}
-            {WEAPON_SPECIAL_SLOW}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
             {WEAPON_SPECIAL_SHOCK}
             {WEAPON_SPECIAL_STUN}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
         range=ranged
         damage=20
